1、修改下拉菜单为层级结构 2、修改发布论文为上传pdf在前台页面直接打开

--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -101,5 +101,9 @@
 			background-color: #00a8e6;
 			color: #fff;
 		}
+        .uk-dropdown-nav li{
+            padding-left: 15px;
+            padding-right: 15px;
+        }
     </style>
   <body>
