2017-5-21 1，增加一个分类-“智慧结控” 2，结防网络地图颜色修改 3，网站不能复制和鼠标右键 4，各地动态改为中心动态 5，修改搜索页面没有内容，底部上移问题

--- a/views/common/nav.ejs
+++ b/views/common/nav.ejs
@@ -123,5 +123,8 @@
                 <%})%>
             </ul>
         </li>
+        <li>
+            <a href="/results">智慧结控</a>
+        </li>
     </ul>
 </div>
