--- a/views/common/nav_index.ejs
+++ b/views/common/nav_index.ejs
@@ -64,6 +64,12 @@
                     防痨协会
                 </a>
             </li>
+            <li>
+                <a href="/results">
+                    <div class="nav-img nav_results"><i class="mask"></i></div>
+                    智慧结控
+                </a>
+            </li>
             <li class="justify_fix"></li>
         </ul>
     </div>
