--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div class="banner">
     <ul>
         <li style="background:url(/images/banner01.jpg)  top center">first slide.</li>
-        <li style="background:url(/images/banner01.jpg)  top center">second slide.</li>
+        <li style="background:url(/images/banner02.jpg)  top center">second slide.</li>
         <li style="background:url(/images/banner01.jpg)  top center">third slide.</li>
     </ul>
     <div class="unslider-arrow-bar">
@@ -133,7 +133,7 @@
         <ul class="notice">
             <li class="notice-md lf">
                 <h3 class="title">
-                    <span  class="title-text">各地动态</span>
+                    <span  class="title-text">中心动态</span>
                     <a class="title-img" href="/news/58ddecf916f4200bc52294d3"></a>
                 </h3>
                 <% if(localNewList){ %>
