--- a/views/results.ejs
+++ b/views/results.ejs
@@ -4,9 +4,9 @@
 <script src="https://cdn.bootcss.com/video.js/5.4.3/ie8/videojs-ie8.js"></script>
 <div class="main subPage">
     <div class="main-box">
-        <div class="path"> 您现在的位置：首页》智慧结控</div>
+        <div class="path"> 您现在的位置：首页》<%= active.name%></div>
         <h3 class="main-rt-title">
-            <p class="title-text">智慧结控</p>
+            <p class="title-text"><%= active.name%></p>
         </h3>
         <div class="main-time">发布时间：2011-03-18</div>
         <div class="results">
