2017-5-25 1，监督投诉表单增加身份证字段 2，修改文章列表页面大于16条才显示分页 3，修改前端首页点击新闻图片报错问题

--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,7 +1,7 @@
 <% include sideBar %>
 <div class="footer bgc-jf color-white">
     <div class="copyright tac">
-        广东省结核病控制中心
+        广东省结核病控制中心（技术支持：<a class="immortalshealth" href="http://www.immortalshealth.com">医睦科技</a>）
     </div>
 </div>
 <!--end:footer-->
