--- a/views/ww.ejs
+++ b/views/ww.ejs
@@ -3,6 +3,6 @@
 <!--end:main 主要内容-->
 <div class="footer bgc-jf color-white footer-bottom">
     <div class="copyright tac">
-        copyright © 2017 结防所
+        广东省结核病控制中心（技术支持：<a class="immortalshealth" href="http://www.immortalshealth.com">医睦科技</a>）
     </div>
 </div>
