--- a/views/common/feedback.ejs
+++ b/views/common/feedback.ejs
@@ -11,6 +11,15 @@
         </div>
         <div class="form-group">
             <label class="form-label">
+                <span class="form-text">身份证号：</span><input class="cardID form-input" type="text"  placeholder="请填写身份证号">
+            </label>
+            <div class="prompt">
+                <span class="edge"><s class="fill"></s></span>
+                <span class="prompt-text">请填写身份证号</span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="form-label">
                 <span class="form-text">联系方式：</span><input class="contact form-input" type="text" placeholder="请填写联系方式">
             </label>
             <div class="prompt">
@@ -78,7 +87,8 @@
                     address:$('.site').val(),
                     email:$('.email').val(),
                     title:$('.theme').val(),
-                    content:$('.textarea').val()
+                    content:$('.textarea').val(),
+                    cardID:$('.cardID').val()
                 },
                 success:function(res){
                     if(res.status == 1){
