2017-5-27 1，为后台投稿管理和志愿者申请添加分页 2，解决前端智慧结控页面不能显示

--- a/views/common/nav.ejs
+++ b/views/common/nav.ejs
@@ -124,7 +124,7 @@
             </ul>
         </li>
         <li>
-            <a href="/results">智慧结控</a>
+            <a href="/results/59225670087cba03af35537c">智慧结控</a>
         </li>
     </ul>
 </div>
