--- a/views/common/nav_index.ejs
+++ b/views/common/nav_index.ejs
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li>
-                <a href="/results">
+                <a href="/results/59225670087cba03af35537c">
                     <div class="nav-img nav_results"><i class="mask"></i></div>
                     智慧结控
                 </a>
