--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                     <div class="jyfw-lf lf">
                         <h4 class="sub-title">
                             名医荟萃
-                            <a class="rt" href="diagnosisDoctor.html">更多专家》</a>
+                            <a class="rt" href="/service/58fdc89d642663116fc5122e">更多专家》</a>
                         </h4>
                         <div class="md-list">
                             <div class="md-item lf">
