--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= title %></title>
+    <link rel="stylesheet"  href="/stylesheets/unslider.css"/>
     <link rel="stylesheet"  href="/stylesheets/index.css"/>
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
 </head>
