2017-6-19 1，更新banner，footer页脚信息 2，添加css源文件

--- a/package/views/ww.ejs
+++ b/package/views/ww.ejs
@@ -5,6 +5,10 @@
 <!--end:main 主要内容-->
 <div class="footer bgc-jf color-white footer-bottom">
     <div class="copyright tac">
-        copyright © 2017 结防所
+        <img src="/images/footer-lf.png" class="copyright-img lf">
+        <div class="lf copyright-info">
+            <div>Copyright2016 All rights reserved.</div>
+            <div>主办： 广东省结核病控制中心<span class="technology">技术支持：<a class="immortalshealth" href="http://www.immortalshealth.com">广东医睦科技有限公司</a></span></div>
+        </div>
     </div>
 </div>
