--- a/views/404.ejs
+++ b/views/404.ejs
@@ -106,7 +106,11 @@
 <!--end:main 主要内容-->
 <div class="footer bgc-jf color-white">
     <div class="copyright tac">
-        copyright © 2017 结防所
+        <img src="/images/footer-lf.png" class="copyright-img lf">
+        <div class="lf copyright-info">
+            <div>Copyright © 2017 Immortalshealth All Rights Reserved</div>
+            <div>主办： 广东省结核病控制中心<span class="technology">技术支持：<a class="immortalshealth" href="http://www.immortalshealth.com">广东医睦科技有限公司</a></span></div>
+        </div>
     </div>
 </div>
 <!--end:footer-->
