--- a/views/common/preorder.ejs
+++ b/views/common/preorder.ejs
@@ -5,7 +5,7 @@
 	       <h3 class="registered-wx-title">结核病控制中心预约挂号</h3>
 	   </div>
 	   <div class="registered-title color-jf">我院近期已开通微信预约挂号，欢迎使用。</div>
-	   <div class="process">
+	   <div class="preorder-process">
 	       <img src="/images/process.jpg" alt="">
 	   </div>
 	</div>
