--- a/views/ww.ejs
+++ b/views/ww.ejs
@@ -3,6 +3,10 @@
 <!--end:main 主要内容-->
 <div class="footer bgc-jf color-white footer-bottom">
     <div class="copyright tac">
-        广东省结核病控制中心（技术支持：<a class="immortalshealth" href="http://www.immortalshealth.com">医睦科技</a>）
+        <img src="/images/footer-lf.png" class="copyright-img lf">
+        <div class="lf copyright-info">
+            <div>Copyright © 2017 Immortalshealth All Rights Reserved</div>
+            <div>主办： 广东省结核病控制中心<span class="technology">技术支持：<a class="immortalshealth" href="http://www.immortalshealth.com">广东医睦科技有限公司</a></span></div>
+        </div>
     </div>
 </div>
