2017-6-20 01 1，修改首页表单不能跳转

--- a/views/common/feedback.ejs
+++ b/views/common/feedback.ejs
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="btn-group">
-            <button class="btn color-white bgc-blue" type="button">提交</button>
+            <button onClick="submitFn()" class="btn color-white bgc-blue" type="button">提交</button>
         </div>
     </form>
     <div class="popup-succeed">
