--- a/views/common/files.ejs
+++ b/views/common/files.ejs
@@ -79,7 +79,7 @@
             <div class="file-hint">(请将上传文稿和上传图片压缩成rar格式上传)</div>
         </div>
         <div class="btn-group">
-            <button type="button" class="btn color-white bgc-blue">提交</button>
+            <button  onClick="submitFn()" type="button" class="btn color-white bgc-blue">提交</button>
         </div>
     </form>
     <div class="popup-succeed">
