--- a/views/files.ejs
+++ b/views/files.ejs
@@ -35,7 +35,7 @@
             </label>
         </div>
         <div class="btn-group">
-            <button class="btn color-white bgc-blue">提交</button>
+            <button onClick="submitFn()" class="btn color-white bgc-blue">提交</button>
         </div>
     </form>
 </div>
