--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,8 +97,8 @@
                                 <label class="form-label"><span class="form-text">科室：</span><input class="form-input"></label>
                             </div>
                             <div class="btn-group">
-                                <button class="btn color-white bgc-orange">预约挂号</button>
-                                <button class="btn color-white bgc-jf">查询</button>
+                                <a href="/service/58feb1cb84d5a6044623c51a?type=page&path=preorder" class="btn color-white bgc-orange tac">预约挂号</a>
+                                <a href="/service/58fdc8f5642663116fc51231?type=page&path=visit" class="btn color-white bgc-jf tac">查询</a>
                             </div>
                         </form>
                     </div>
