修改诊疗服务等链接地址

--- a/views/common/nav.ejs
+++ b/views/common/nav.ejs
@@ -29,7 +29,7 @@
             </ul>
         </li>
         <li>
-            <a href="/service/58fdc89d642663116fc5122e">
+            <a href="/service/58fdc89d642663116fc5122e?type=page&path=doctors">
                 诊疗服务
             </a>
             <ul class="nav-sub-list">
