--- a/less/common.less
+++ b/less/common.less
@@ -47,6 +47,9 @@
       width: 100%;
     }
   }
+  .defImg{
+    background: url(../images/defLogo.png) center no-repeat #eee;
+  }
   .item-rt{
     width: 735px
   }
