--- a/less/layout.less
+++ b/less/layout.less
@@ -338,6 +338,11 @@
               }
             }
           }
+          .defImg{
+            width: 98px;
+            height: 98px;
+            background: url(../images/defLogo.png) center no-repeat;
+          }
           .md-item-rt{
             width: 123px;
             margin-left: 16px;
@@ -890,6 +895,7 @@
         padding: 6px 0;
         margin-left: 22px;
         .item-rt-title{
+          font-weight: normal;
           font-size: 16px;
           color: #000;
         }
@@ -1205,6 +1211,10 @@
     margin-top: -1px;
     background: #fff;
     min-height: 576px;
+    .unlogin{
+      display: block;
+      margin: 80px auto 0;
+    }
   }
   .table {
     font-size: 13px;
