--- a/views/common/nav.ejs
+++ b/views/common/nav.ejs
@@ -1,7 +1,6 @@
 <div class="nav">
     <ul class="nav-list">
         <li><a href="/">首页</a></li>
-        
         <li>
             <a href="/policy/58e4a0b04c2ded0e96fa643e?type=article">中心概况</a>
             <ul class="nav-sub-list">
@@ -29,7 +28,7 @@
             </ul>
         </li>
         <li>
-            <a href="/service/58fdc89d642663116fc5122e">
+            <a href="/service/58fdc89d642663116fc5122e?type=page&path=doctors">
                 诊疗服务
             </a>
             <ul class="nav-sub-list">
@@ -68,7 +67,6 @@
                 <%})%>
             </ul>
         </li>
-        
         <li>
             <a href="/jkcj/58e44143e67f6303b969c8ef?type=page&path=netWork">
                 健康促进
