--- a/views/common/nav_index.ejs
+++ b/views/common/nav_index.ejs
@@ -15,7 +15,7 @@
             </li>
             
             <li>
-                <a href="/service/58fdc89d642663116fc5122e">
+                <a href="/service/58fdc89d642663116fc5122e?type=page&path=doctors">
                     <div class="nav-img nav_diagnosis"><i class="mask"></i></div>
                     诊疗服务
                 </a>
