修改6月20日演示需要修改的内容

--- a/views/common/content.ejs
+++ b/views/common/content.ejs
@@ -1,8 +1,7 @@
 <% if(typeof(childrenType)== 'undefined' || childrenType == 'list' ){ %>
     <% include list %>
     <% include pagnation %>
-
-<% }else if(childrenType == 'post'){ %>
+<% }else if(childrenType == 'post' || childrenType == 'article'){ %>
     <% include post %>
 <%}else if(childrenType == 'page'){%>
 	<% if(path){%>
