--- a/views/train.ejs
+++ b/views/train.ejs
@@ -22,8 +22,11 @@
                      return false;
                }
             %>
+
+
+
             <% typeList.forEach(function(item){ %>
-                <a class="main-lf-item <% if(isInItem(item)){ %>active<% } %>"<%if(item.type=='link'){%> href="<%= item.link%>" target="_blank" <%}else if(!item.children || !item.children.length){%>href="/train/<%=item._id%><%if(item.type=='article'){%>?type=article<%}else if(item.type=='page'){%>?type=page&path=<%= item.page%><%}}%>">
+                <a class="main-lf-item <% if(isInItem(item)){ %>active<% } %>" <%if(!item.children || !item.children.length){%>href="/train/<%=item._id%><%if(item.type){ %>?type=<%= item.type%><%if(item.type=='page'){%>&path=<%= item.page%><%}}}%>">
                     <%= item.name%>
                 </a>
                 <%if(item.children && !!item.children.length){%>
@@ -37,7 +40,7 @@
                         }
                         %>
                         <% item.children.forEach(function(item){%>
-                            <a class="main-lf-sub-item <% if (isSubItem(item)){ %>sub-active<% } %>" href="<%if(item.type=='link'){%><%= item.link%><%}else{%>/train/<%= item._doc._id%><% if(item._doc._id =='58e45595ae3484063bc2b6b5'){ %>?type=nav<%}else if(item.type=='article'){%>?type=article<%}else if(item.type=='page'){%>?type=page&path=<%= item.page%><%}}%>">
+                            <a class="main-lf-sub-item <% if(isSubItem(item)){ %>sub-active<% } %>" href="<%if(item.type=='link'){%><%= item.link%><%}else{%>/train/<%= item._doc._id%><% if(item._doc._id =='58e45595ae3484063bc2b6b5'){ %>?type=nav<%}else if(item.type=='article'){%>?type=article<%}else if(item.type=='page'){%>?type=page&path=<%= item.page%><%}}%>">
                                 <%= item.name%>
                             </a>
                         <%})%>
@@ -53,7 +56,7 @@
                 <p class="title-text"><%= active.name%></p>
             </h3>
             <%- include('./common/content') %>
-            
+
         </div>
     </div>
 </div>
