2017-6-23  首页导航栏去掉智慧结控

--- a/less/layout.less
+++ b/less/layout.less
@@ -179,9 +179,8 @@
 /*******************nav 导航***************************/
 .nav-block{
   .nav-box{
-    margin: 51px 0px 77px;
+    margin: 51px 68px 77px;
     ul{
-      margin: 0px 150px 0px 40px;
       li{
         display: inline-block;
         font-size: 16px;
@@ -245,7 +244,7 @@
       }
     }
     .nav-bottom {
-      margin: 29px 40px 0 150px;
+      margin: 29px 110px 0;
     }
   }
   .justify_fix {
