--- a/views/common/doctors.ejs
+++ b/views/common/doctors.ejs
@@ -24,18 +24,31 @@
                 if (res.status == 1) {
                     var datas =toJson(parseXML(res.datas.string._))
                     var list = '';
-                    $.each(datas.res.doctorInfo, function (i, item) {
+                    if(typeof datas.res.doctorInfo == "object"){
                         list += '<a class="item" href="javascript:void(0)">';
-                        if(typeof item.img == 'undefined' || item.img == ""){
-                            list +='<div class="item-lf-img defImg lf">';
-                        }else{
-                            list += '<img class="item-img" src='+item.img+'>';
+                        if (typeof datas.res.doctorInfo.picturePath == 'undefined' || datas.res.doctorInfo.picturePath == "") {
+                            list += '<div class="item-lf-img defImg lf">';
+                        } else {
+                            list += '<img class="item-img" src=' + datas.res.doctorInfo.picturePath + '>';
                         }
                         list += '</div><div class="item-rt lf">';
-                        list += '<h3 class="item-rt-title">'+item.doctorName+'</h3><p class="item-rt-p">';
-                        list += ' <span class="item-rt-type">简介：</span>'+item.desc;
+                        list += '<h3 class="item-rt-title">' + datas.res.doctorInfo.doctorName + '</h3><p class="item-rt-p">';
+                        list += ' <span class="item-rt-type">简介：</span>' + datas.res.doctorInfo.desc;
                         list += ' </p> </div> </a>';
-                    })
+                    }else {
+                        $.each(datas.res.doctorInfo, function (i, item) {
+                            list += '<a class="item" href="javascript:void(0)">';
+                            if (typeof item.picturePath == 'undefined' || item.picturePath == "") {
+                                list += '<div class="item-lf-img defImg lf">';
+                            } else {
+                                list += '<img class="item-img" src=' + item.picturePath + '>';
+                            }
+                            list += '</div><div class="item-rt lf">';
+                            list += '<h3 class="item-rt-title">' + item.doctorName + '</h3><p class="item-rt-p">';
+                            list += ' <span class="item-rt-type">简介：</span>' + item.desc;
+                            list += ' </p> </div> </a>';
+                        })
+                    }
                     $('.list').append(list);
                 }
             }
